package com.smarttourism.orchestrator.service;

import com.smarttourism.notification.AlertRequest;
import com.smarttourism.notification.AlertResponse;
import com.smarttourism.notification.CheckRequest;
import com.smarttourism.notification.AlertListResponse;
import com.smarttourism.notification.StreamRequest;
import com.smarttourism.notification.NotificationServiceGrpc;

import io.grpc.StatusRuntimeException;
import io.grpc.stub.StreamObserver;
import lombok.extern.slf4j.Slf4j;
import net.devh.boot.grpc.client.inject.GrpcClient;
import org.springframework.cloud.client.circuitbreaker.CircuitBreaker;
import org.springframework.cloud.client.circuitbreaker.CircuitBreakerFactory;
import org.springframework.scheduling.annotation.Scheduled;
import org.springframework.stereotype.Service;
import reactor.core.publisher.Flux;
import reactor.core.publisher.Mono;

import java.time.Duration;
import java.util.ArrayList;
import java.util.HashMap;
import java.util.List;
import java.util.Map;
import java.util.concurrent.CountDownLatch;
import java.util.concurrent.TimeUnit;
import java.util.concurrent.atomic.AtomicInteger;

@Slf4j
@Service
public class NotificationClientService {
    
    // FIXED: Use @GrpcClient annotation instead of constructor injection
    @GrpcClient("notification-service")
    private NotificationServiceGrpc.NotificationServiceBlockingStub blockingStub;
    
    @GrpcClient("notification-service")
    private NotificationServiceGrpc.NotificationServiceStub asyncStub;
    
    private final CircuitBreakerFactory circuitBreakerFactory;
    private final List<AlertResponse> recentAlerts = new ArrayList<>();
    private final AtomicInteger alertCounter = new AtomicInteger(0);
    
    // Constructor with only CircuitBreakerFactory
    public NotificationClientService(CircuitBreakerFactory circuitBreakerFactory) {
        this.circuitBreakerFactory = circuitBreakerFactory;
    }
    
    /**
     * M√©thode 1: RPC Unary - Envoi simple d'alerte
     */
    public AlertResponse sendAlert(String type, String location, String message, int severity) {
        CircuitBreaker circuitBreaker = circuitBreakerFactory.create("notificationService");
        
        return circuitBreaker.run(() -> {
            log.info("üì§ Envoi d'alerte via gRPC (Unary): type={}, location={}", type, location);
            
            AlertRequest request = AlertRequest.newBuilder()
                    .setAlertId("alert-" + System.currentTimeMillis())
                    .setType(type)
                    .setLocation(location)
                    .setMessage(message)
                    .setSeverity(severity)
                    .build();
            
            try {
                AlertResponse response = blockingStub.sendAlert(request);
                alertCounter.incrementAndGet();
                
                log.info("‚úÖ Alerte envoy√©e avec succ√®s: id={}, type={}", 
                        response.getAlertId(), response.getType());
                
                // Ajouter aux alertes r√©centes
                synchronized (recentAlerts) {
                    recentAlerts.add(response);
                    if (recentAlerts.size() > 100) {
                        recentAlerts.remove(0);
                    }
                }
                
                return response;
                
            } catch (StatusRuntimeException e) {
                log.error("‚ùå Erreur gRPC lors de l'envoi d'alerte: {}", e.getStatus());
                throw new RuntimeException("√âchec de l'appel gRPC: " + e.getStatus(), e);
            }
        }, throwable -> {
            log.error("‚õî Circuit breaker ouvert - Fallback activ√©");
            return AlertResponse.newBuilder()
                    .setAlertId("fallback-alert")
                    .setType(type)
                    .setLocation(location)
                    .setMessage("Service temporairement indisponible: " + message)
                    .setSeverity(severity)
                    .setTimestamp(String.valueOf(System.currentTimeMillis()))
                    .setStatus("FALLBACK")
                    .build();
        });
    }
    
    /**
     * M√©thode 2: Server Streaming - R√©ception d'alertes en continu
     */
    public Flux<AlertResponse> streamAlerts(String location, List<String> alertTypes) {
        return Flux.create(emitter -> {
            log.info("üéØ D√©marrage du streaming d'alertes pour: {}", location);
            
            StreamRequest request = StreamRequest.newBuilder()
                    .setLocation(location)
                    .addAllAlertTypes(alertTypes)
                    .build();
            
            CountDownLatch latch = new CountDownLatch(1);
            
            asyncStub.streamAlerts(request, new StreamObserver<AlertResponse>() {
                @Override
                public void onNext(AlertResponse alert) {
                    log.debug("üì® Nouvelle alerte re√ßue: {} - {} (severity: {})", 
                            alert.getType(), alert.getMessage(), alert.getSeverity());
                    
                    emitter.next(alert);
                    
                    // Traitement en temps r√©el
                    processRealTimeAlert(alert);
                    
                    // Mettre √† jour les alertes r√©centes
                    synchronized (recentAlerts) {
                        recentAlerts.add(alert);
                        if (recentAlerts.size() > 100) {
                            recentAlerts.remove(0);
                        }
                    }
                }
                
                @Override
                public void onError(Throwable t) {
                    log.error("üí• Erreur dans le streaming: {}", t.getMessage());
                    emitter.error(t);
                    latch.countDown();
                }
                
                @Override
                public void onCompleted() {
                    log.info("‚úÖ Streaming termin√© pour: {}", location);
                    emitter.complete();
                    latch.countDown();
                }
            });
            
            // Attendre la fin du streaming
            try {
                latch.await(30, TimeUnit.SECONDS);
            } catch (InterruptedException e) {
                Thread.currentThread().interrupt();
                emitter.error(e);
            }
        });
    }
    
    /**
     * M√©thode 3: Flux continu pour dashboard (Reactive)
     */
    public Flux<AlertResponse> continuousStream(String location) {
        return Flux.interval(Duration.ofSeconds(5))
                .flatMap(tick -> Mono.fromCallable(() -> {
                    CheckRequest request = CheckRequest.newBuilder()
                            .setLocation(location)
                            .build();
                    
                    AlertListResponse response = blockingStub.checkActiveAlerts(request);
                    return response.getAlertsList();
                }))
                .flatMapIterable(alerts -> alerts)
                .distinct(AlertResponse::getAlertId)
                .doOnSubscribe(subscription -> 
                    log.info("üîÑ D√©marrage du flux continu pour: {}", location))
                .doOnTerminate(() -> 
                    log.info("‚èπÔ∏è  Flux continu arr√™t√© pour: {}", location));
    }
    
    /**
     * M√©thode 4: V√©rification des alertes actives
     */
    public List<AlertResponse> checkActiveAlerts(String location) {
        CircuitBreaker circuitBreaker = circuitBreakerFactory.create("notificationService");
        
        return circuitBreaker.run(() -> {
            try {
                log.info("üîç Checking active alerts for location: {}", location);
                
                CheckRequest request = CheckRequest.newBuilder()
                        .setLocation(location)
                        .build();
                
                AlertListResponse response = blockingStub
                    .withDeadlineAfter(5, TimeUnit.SECONDS)  // Add timeout
                    .checkActiveAlerts(request);
                    
                log.info("‚úÖ {} active alerts found for: {}", 
                        response.getAlertsCount(), location);
                
                return response.getAlertsList();
                
            } catch (StatusRuntimeException e) {
                log.error("‚ùå gRPC error checking alerts: status={}, description={}", 
                    e.getStatus().getCode(), e.getStatus().getDescription());
                throw new RuntimeException("gRPC call failed: " + e.getStatus(), e);
            }
        }, throwable -> {
            log.error("‚õî Circuit breaker activated for checkActiveAlerts");
            return List.of();  // Return empty list as fallback
        });
    }
    
    /**
     * Traitement en temps r√©el des alertes
     */
    private void processRealTimeAlert(AlertResponse alert) {
        // Logique de traitement bas√©e sur la s√©v√©rit√©
        switch (alert.getSeverity()) {
            case 5: // Urgence critique
                log.warn("üö® ALERTE CRITIQUE: {} √† {}", 
                        alert.getMessage(), alert.getLocation());
                notifyEmergencyServices(alert);
                break;
                
            case 4: // Haute priorit√©
                log.warn("üî¥ Alerte haute priorit√©: {}", alert.getMessage());
                notifySecurityTeam(alert);
                break;
                
            case 3: // Moyenne
                log.warn("üü° Alerte mod√©r√©e: {}", alert.getMessage());
                notifyTouristGuides(alert);
                break;
                
            default:
                log.info("üîµ Notification: {}", alert.getMessage());
        }
    }
    
    private void notifyEmergencyServices(AlertResponse alert) {
        log.info("üìû Notification aux services d'urgence: {} √† {}", 
                alert.getType(), alert.getLocation());
    }
    
    private void notifySecurityTeam(AlertResponse alert) {
        log.info("üëÆ Notification √† l'√©quipe de s√©curit√©: {}", alert.getMessage());
    }
    
    private void notifyTouristGuides(AlertResponse alert) {
        log.info("üì± Notification aux guides touristiques: {}", alert.getMessage());
    }
    
    /**
     * V√©rification p√©riodique des alertes actives
     */
    @Scheduled(fixedRate = 60000) // Toutes les minutes
    public void scheduledAlertCheck() {
        try {
            List<AlertResponse> activeAlerts = checkActiveAlerts("Downtown");
            log.info("‚è∞ V√©rification planifi√©e: {} alertes actives", activeAlerts.size());
            
        } catch (Exception e) {
            log.error("Erreur lors de la v√©rification planifi√©e", e);
        }
    }
    
    /**
     * Statistiques
     */
    public Map<String, Object> getStats() {
        Map<String, Object> stats = new HashMap<>();
        stats.put("totalAlertsSent", alertCounter.get());
        stats.put("recentAlertsCount", recentAlerts.size());
        stats.put("serviceStatus", "CONNECTED");
        stats.put("lastCheck", System.currentTimeMillis());
        
        return stats;
    }
}